changes company name to periox

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     },
     "authors": [
         {
-            "name": "HAL 9000"
+            "name": "PERIOX"
         }
     ],
     "require": {
